# cdemu

./: .flake8  AUTHORS  ChangeLog  Makefile  Makefile.am  README  autogen.sh  configure.ac  libmirage.pc.in  vhba.c
cdemu-client/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
cdemu-client/cmake/: FindIntlTool.cmake
cdemu-client/data/: Makefile.am  cdemu-bash-completion.sh  cdemu-bashcomp  cdemu-client.desktop.in
cdemu-client/debian/: cdemu-client.conf  cdemu-client.conffiles  cdemu-client.desktop  cdemu-client.install  changelog  control  copyright  pyversions  rules  source_cdemu-client.py
cdemu-client/man/: cdemu.1
cdemu-client/po/: POTFILES.in  de.po  fr.po  ka.po  no.po  pl.po  ro.po  ru.po  sl.po  sv.po
cdemu-client/src/: cdemu  cdemu.py  globals.py.in
cdemu-daemon/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  README  autogen.sh  config.h.in  configure.ac
cdemu-daemon/cmake/: FileList.cmake  Utilities.cmake
cdemu-daemon/debian/: cdemu-daemon-crashdb.conf  cdemu-daemon.desktop  cdemu-daemon.dirs  cdemu-daemon.init  cdemu-daemon.install  cdemu-daemon.postinst  cdemu-daemon.prerm  cdemu-daemon.session  changelog  control  copyright  rules  source.apport  watch
cdemu-daemon/man/: Makefile.am  cdemu-daemon.8  cdemud.8
cdemu-daemon/po/: POTFILES.in  ka.po  ro.po  ru.po  sl.po
cdemu-daemon/service-example/: README.md  cdemu-daemon.service  net.sf.cdemu.CDEmuDaemon.service
cdemu-daemon/session/: Makefile.am  cdemu-daemon-session.sh  net.sf.cdemu.CDEMUD_Daemon.service  net.sf.cdemu.CDEMUD_Daemon.service.in  net.sf.cdemu.CDEmuDaemon.service.in
cdemu-daemon/src/: Makefile.am  audio-private.h  audio.c  audio.h  cdemu-audio-private.h  cdemu-audio.c  cdemu-audio.h  cdemu-daemon-dbus.c  cdemu-daemon-private.h  cdemu-daemon.c  cdemu-daemon.h  cdemu-debug.h  cdemu-device-commands.c  cdemu-device-delay.c  cdemu-device-features.c  cdemu-device-kernel-io.c  cdemu-device-load.c  cdemu-device-mapping.c  cdemu-device-mode-pages.c  cdemu-device-private.h  cdemu-device-recording.c  cdemu-device.c  cdemu-device.h  cdemu-error.c  cdemu-error.h  cdemu-mmc-features.h  cdemu-mode-pages.h  cdemu-packet-commands.h  cdemu-sense-constants.h  cdemu-types.h  cdemu.h  cdemud-audio-alsa.c  cdemud-audio-null.c  cdemud-audio-null.h  cdemud-audio-private.h  cdemud-audio.c  cdemud-audio.h  cdemud-daemon-dbus.c  cdemud-daemon-private.h  cdemud-daemon.c  (+54 more)
cdemu-daemon/system/: Makefile.am  cdemu-daemon-system.service  cdemu-daemon-system.sh  net.sf.cdemu.CDEMUD_Daemon.service  net.sf.cdemu.CDEMUD_Daemon.service.in  net.sf.cdemu.CDEmuDaemon.service.in
data/: Makefile.am  gcdemu.schemas.in
docs/: Makefile.am  gcdemu.omf.in
docs/C/: gcdemu.xml
gcdemu/: CMakeLists.txt  COPYING  ChangeLog  Makefile.am  README  configure.ac
gcdemu/cmake/: FindIntlTool.cmake
gcdemu/data/: Makefile.am  apps.gcdemu.gschema.xml.in  gcdemu-indicator.desktop.in  gcdemu.desktop.in  gcdemu.schemas.in  net.sf.cdemu.gcdemu.gschema.xml.in
gcdemu/debian/: changelog  control  copyright  gcdemu.install  gcdemu.links  rules  source.apport  watch
gcdemu/pixmaps/: Makefile.am  gcdemu-art.xcf
gcdemu/po/: POTFILES.in  de.po  fr.po  ka.po  ko.po  no.po  pl.po  pt_BR.po  ro.po  ru.po  sl.po  sv.po  zh_CN.po
gcdemu/servers/: GNOME_gCDEmuApplet.server.in.in
gcdemu/src/: Makefile.am  applet.py  device.py  gcdemu  globals.py.in  ui.py
image-analyzer/: CMakeLists.txt  ChangeLog  Makefile.am  README  config.h.in  configure.ac
image-analyzer/cmake/: FileList.cmake  FindIntlTool.cmake  Utilities.cmake
image-analyzer/data/: Makefile.am  image-analyzer.desktop  image-analyzer.desktop.in
image-analyzer/debian/: changelog  control  copyright  image-analyzer.desktop  image-analyzer.install  rules  source.apport  watch
image-analyzer/po/: POTFILES.in  ka.po  ro.po  ru.po  sl.po
image-analyzer/src/: Makefile.am  application-private.h  application-window.c  application-window.h  application-xml-dump.c  application-xml-load.c  application.c  application.h  disc-structure-window-private.h  disc-structure-window.c  disc-structure-window.h  disc-structures-window.c  disc-structures-window.h  disc-topology-window-private.h  disc-topology-window.c  disc-topology-window.h  disc-tree-dump.c  disc-tree-dump.h  dump.c  dump.h  image-analyzer  image-analyzer-application-private.h  image-analyzer-application-xml-dump.c  image-analyzer-application-xml-load.c  image-analyzer-application.c  image-analyzer-application.h  image-analyzer-disc-structure-private.h  image-analyzer-disc-structure.c  image-analyzer-disc-structure.h  image-analyzer-disc-topology-private.h  image-analyzer-disc-topology.c  image-analyzer-disc-topology.h  image-analyzer-dump.c  image-analyzer-dump.h  image-analyzer-log-window-private.h  image-analyzer-log-window.c  image-analyzer-log-window.h  image-analyzer-parser-log-private.h  image-analyzer-parser-log.c  image-analyzer-parser-log.h  (+24 more)
libmirage/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  README  config.h.in  configure.ac  libmirage.pc.in
libmirage/cmake/: FileList.cmake  GObjectIntrospection.cmake  GtkDoc.cmake
libmirage/debian/: changelog  clean  control  copyright  gir1.2-mirage-1.0.install  gir1.2-mirage-3.2.install  libmirage-doc.doc-base  libmirage-doc.links  libmirage10-doc.doc-base  libmirage10-doc.links  libmirage10.install  libmirage10.symbols  libmirage11-doc.doc-base  libmirage11-doc.links  libmirage11.install  libmirage11.symbols  libmirage12.install  libmirage12.symbols  libmirage2-doc.links  libmirage2.install  libmirage2.symbols  libmirage3-doc.doc-base  libmirage3-doc.install  libmirage3.install  libmirage3.symbols  libmirage6-doc.doc-base  libmirage6-doc.install  libmirage6-doc.links  libmirage6.install  libmirage6.symbols  libmirage7-dev.install  libmirage7-doc.doc-base  libmirage7-doc.links  libmirage7.install  libmirage7.symbols  libmirage8-doc.doc-base  libmirage8-doc.links  (+6 more)
servers/: GNOME_gCDEmuApplet.server.in.in  Makefile.am
session/: Makefile.am  cdemu-daemon-session.service
system/: Makefile.am
(+970 files in other folders)
