include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gcdemu
DOC_ENTITIES = legal.xml

DOC_FIGURES = \
    figures/gcdemu-applet.png \
    figures/gcdemu-fig1.png \
    figures/gcdemu-fig2.png \
    figures/gcdemu-fig3.png \
    figures/gcdemu-fig4.png \
    figures/gcdemu-fig5.png \
    figures/gcdemu-fig6.png \
    figures/gcdemu-fig7.png \
    figures/gcdemu-fig8.png \
    figures/gcdemu-fig9.png \
    figures/gcdemu-fig10.png \
    figures/gcdemu-fig11.png

DOC_LINGUAS = 
